changed labed and basic insert op

--- a/manage.html
+++ b/manage.html
@@ -2,14 +2,14 @@
     <div class="list-group" ng-if="user.loggedin">
         <li class="list-group-item list-group-item-success"><b> Menu </b></li>
         <a class="list-group-item" href="#" ui-sref="manage.student">
-            <li class="fa fa-users lg"> </li> Ajouter Eleve</a>
+            <li class="fa fa-users lg"> </li> Ajouter Employé</a>
         <a class="list-group-item" href="#" ui-sref="manage.payment">
             <li class="fa fa-cart-plus lg"> </li> Paiment</a>
         <a class="list-group-item" ui-sref="manage.history" href="#">
             <li class="fa fa-history lg"> </li> Historique</a>
 
         <a class="list-group-item" ui-sref="manage.daily" href="#">
-           <i class="fa fa-calendar lg"></i> </li> Journal
+           <li class="fa fa-calendar lg"> </li> Journal
         </a>
 
         <a class="list-group-item" href="#" ui-sref="manage.unpayed">
