--- a/manage.html
+++ b/manage.html
@@ -5,17 +5,17 @@
             <li class="fa fa-users lg"> </li> Ajouter Employé</a>
         <a class="list-group-item" href="#" ui-sref="manage.payment">
             <li class="fa fa-cart-plus lg"> </li> Paiment</a>
-        <a class="list-group-item" ui-sref="manage.history" href="#">
-            <li class="fa fa-history lg"> </li> Historique</a>
+        <!-- <a class="list-group-item" ui-sref="manage.history" href="#">
+            <li class="fa fa-history lg"> </li> Historique</a> -->
 
         <a class="list-group-item" ui-sref="manage.daily" href="#">
            <li class="fa fa-calendar lg"> </li> Journal
         </a>
 
-        <a class="list-group-item" href="#" ui-sref="manage.unpayed">
+        <!--<a class="list-group-item" href="#" ui-sref="manage.unpayed">
             <li class="fa fa-exclamation-triangle lg"> </li> Impayés</a>
         <a class="list-group-item" href="#" ui-sref="manage.cheque">
-            <li class="fa fa-exclamation-triangle lg"> </li> Voir chéques</a>
+            <li class="fa fa-exclamation-triangle lg"> </li> Voir chéques</a> -->
     </div>
 </div>
 <div class="col-md-10">
